--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.6",
+    "@supabase/supabase-js": "^2.48.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
+    "next": "15.1.7",
+    "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-responsive-carousel": "^3.2.23",
+    "recharts": "^2.15.1",
+    "supabase": "^2.12.1",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
